--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 </head>
 <body>
 
+  <main>
+
   <div class="container">
     <img src="./img/01.jpg" alt="">
-      <div class="top"><i class="fa-solid fa-arrow-up"></i></div>
-      <div class="down"><i class="fa-solid fa-arrow-down"></i></div>
+      <div><i class="fa-solid fa-arrow-up"></i></div>
+      <div><i class="fa-solid fa-arrow-down"></i></div>
 
 
   </div>
+
+  </main>
   
 
   <script src="./js/script.js"></script>
