--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
   <main>
 
-  <div class="container">
-    <img src="./img/01.jpg" alt="">
-      <div><i class="fa-solid fa-arrow-up"></i></div>
-      <div><i class="fa-solid fa-arrow-down"></i></div>
+    <div class="container">
+      <div class="box">
 
+        <div><i class="fa-solid fa-arrow-up"></i></div>
+        <div><i class="fa-solid fa-arrow-down"></i></div>
+      </div>
 
-  </div>
+    </div>
 
   </main>
   
