--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
       <div class="box">
 
-        <div><i class="fa-solid fa-arrow-up"></i></div>
-        <div><i class="fa-solid fa-arrow-down"></i></div>
+        <div><i class="fa-solid fa-arrow-up btn-up"></i></div>
+        <div><i class="fa-solid fa-arrow-down btn-down"></i></div>
       </div>
 
     </div>
